force-app/main/default/objects/XactlyExpress__XCProcessPlan__c/XactlyExpress__XCProcessPlan__c.object-meta.xml
<CustomObject>
    <label>XCProcessPlan</label>
    <nameField>
        <label>XCProcessPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCProcessPlans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>