force-app/main/default/objects/XactlyExpress__XCProcessPlan__c/fields/XactlyExpress__Status__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calculating</fullName>
                <default>true</default>
                <label>Calculating</label>
            </value>
            <value>
                <fullName>Latest</fullName>
            </value>
            <value>
                <fullName>DeleteMe</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Shadowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>