force-app/main/default/objects/XactlyExpress__XCProcessPlan__c/listViews/XactlyExpress__All.listView-meta.xml
<ListView>
    <fullName>XactlyExpress__All</fullName>
    <columns>NAME</columns>
    <columns>XactlyExpress__PlanID__c</columns>
    <columns>XactlyExpress__ProcessID__c</columns>
    <columns>XactlyExpress__Status__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>XactlyExpress__IsStale__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>